--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -42,6 +42,9 @@
         <link rel="stylesheet" href="/static/vendor/switchery/switchery.css">
         <link rel="stylesheet" href="/static/vendor/slidepanel/slidePanel.css">
         <link rel="stylesheet" href="/static/vendor/flag-icon-css/flag-icon.css">
+        <link rel="stylesheet" href="/static/vendor/jquery-labelauty/jquery-labelauty.css">
+        <link rel="stylesheet" href="/static/vendor/select2/select2.css">
+        <link rel="stylesheet" href="/static/vendor/bootstrap-datepicker/bootstrap-datepicker.css">
         <!-- Skin -->
         <link id="skinStyle" href="/static/skins/{{ request.instance.theme|default:"red" }}.css" rel="stylesheet" type="text/css">
         <!-- Fonts -->
