--- a/templates/layout/sections/scripts.html
+++ b/templates/layout/sections/scripts.html
@@ -10,6 +10,10 @@
 <script src="/static/vendor/ashoverscroll/jquery-asHoverScroll.js"></script>
 <script src="/static/vendor/screenfull/screenfull.js"></script>
 <script src="/static/vendor/slidepanel/jquery-slidePanel.js"></script>
+<script src="/static/vendor/switchery/switchery.min.js"></script>
+<script src="/static/vendor/jquery-labelauty/jquery-labelauty.js"></script>
+<script src="/static/vendor/select2/select2.full.min.js"></script>
+<script src="/static/vendor/bootstrap-datepicker/bootstrap-datepicker.js"></script>
 <!-- Scripts -->
 <script src="/static/js/State.js"></script>
 <script src="/static/js/Component.js"></script>
@@ -21,6 +25,7 @@
 <script src="/static/js/Section/Sidebar.js"></script>
 <script src="/static/js/Section/PageAside.js"></script>
 <script src="/static/js/Plugin/menu.js"></script>
+
 <!-- Config -->
 <script src="/static/js/config/colors.js"></script>
 <script>
@@ -28,6 +33,11 @@ Config.set('assets', '/static');
 </script>
 <!-- Init -->
 <script src="/static/js/Site.js"></script>
+<script src="/static/js/Plugin/slidepanel.js"></script>
+<script src="/static/js/Plugin/switchery.js"></script>
+<script src="/static/js/Plugin/jquery-labelauty.js"></script>
+<script src="/static/js/Plugin/select2.js"></script>
+<script src="/static/js/Plugin/bootstrap-datepicker.js"></script>
 <script>
 (function(document, window, $) {
   'use strict';
