--- a/templates/layout/sections/menubar.html
+++ b/templates/layout/sections/menubar.html
@@ -131,12 +131,12 @@
                                     </a>
                                 </li>
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="javascript:void(0)">
+                                    <a class="animsition-link" href="{% url 'incidents:list' %}">
                                         <span class="site-menu-title">{% trans 'My Incidents' %}</span>
                                     </a>
                                 </li>
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="javascript:void(0)">
+                                    <a class="animsition-link" href="{% url 'incidents:review' %}">
                                         <span class="site-menu-title">{% trans 'Manage' %}</span>
                                     </a>
                                 </li>
