--- a/templates/incidents/incident_list.html
+++ b/templates/incidents/incident_list.html
@@ -19,7 +19,7 @@
             <section class="page-aside-section">
               <h5 class="page-aside-title">Introduction</h5>
               <div class="list-group">
-                  <a class="list-group-item" href="{% url 'incidents:list' %}">
+                  <a class="list-group-item" href="?">
                   <i class="icon wb-emoticon" aria-hidden="true"></i>
                   <span class="list-group-item-content">All </span>
                   <span class="tag-pill">6</span>
