--- a/templates/incidents/incident_list.html
+++ b/templates/incidents/incident_list.html
@@ -49,6 +49,7 @@
 {% block page_content %}
       <!-- Forum Content -->
       <div class="page-content tab-content page-content-table nav-tabs-animate">
+      {{ perms }}
         <div class="tab-pane animation-fade active" id="forum-newest" role="tabpanel">
           <table class="table is-indent">
             <tbody>
