--- a/templates/incidents/incident_form.html
+++ b/templates/incidents/incident_form.html
@@ -57,7 +57,7 @@
                         </div>
                     </div>
 
-                    <div class="row form-group" {% if not perms.incident.change_incident %}style="display: none;" {% endif %}>
+                    <div class="row form-group" {% if not perms.incidents.can_change_incident %}style="display: none;" {% endif %}>
                         <label class="control-label col-sm-2">Professor/a</label>
                         <div class="col-sm-10">
                             <select class="form-control" data-plugin="select2" data-placeholder="Cerca" name="{{ form.teacher.html_name }}" id="{{ form.teacher.id_for_label }}">
@@ -99,7 +99,7 @@
                             <textarea class="form-control" name="{{ form.comments.html_name }}" id="{{ form.comments.id_for_label }}" rows="5"></textarea>
                         </div>
                     </div>
-                    {% if perms.incident.change_incident %}
+                    {% if perms.incidents.can_change_incident %}
                     <hr>
                      <div class="row form-group">
                         <label class="control-label col-sm-2">Categoria</label>
@@ -112,7 +112,7 @@
                              </div>
                      </div>
                     {% endif %}
-                    {% if perms.incident.change_incident %}
+                    {% if perms.incidents.can_change_incident %}
                     <div class="row form-group">
                         <label class="control-label col-sm-2">Opcions</label>
                         <div class="col-sm-1"></div>
