--- a/templates/schedule/timetableentry_archive_day.html
+++ b/templates/schedule/timetableentry_archive_day.html
@@ -1,5 +1,6 @@
 {% extends 'layout/base.html' %}
-{% load studentstatus i18n %}
+{% load studentstatus %}
+{% load i18n %}
 {% block extra_css %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css">
 {% endblock %}
